Many small fixes.
Romanian translation corrections.
Fixed several improper strings.
Fixed Edit waypoint page styles.
Fixed several OpenChecker styles.
Small fixes in newwp, search page (html), search page (search params),
newcacherest.
Aligned left openchecker in viewcache. (everything is aligned left, this
looked out of place.)
Fixes https://github.com/opencaching/opencaching-pl/issues/923

--- a/tpl/stdstyle/css/style_screen.css
+++ b/tpl/stdstyle/css/style_screen.css
@@ -681,7 +681,7 @@ a.btn {
     display: inline-block;
     width: 100%;
     height: 30px;
-    padding: 6px 12px;
+    padding: 4px 12px;
     font-size: 14px;
     line-height: 1.42857143;
     color: #555;
